# mini-print-ws-stream

./: .gitignore  README.md  pyproject.toml
client/: mini.html
mini_print_stream_test/: requirements.txt  serve.py  stream.py
ws-mini-client/: package-lock.json  package.json
ws-mini-client/src/: App.tsx  FrameView.tsx  index.tsx  infer-state.ts
ws-print-client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ws-print-client/src/: App.tsx  infer-state.ts  main.tsx
ws-print-client/src/components/: ConnectionStatus.tsx  FrameUpload.tsx  FrameView.tsx  NotificationForm.tsx  Predictions.tsx  StartStream.tsx
yolo_weights/: best.pt
