[tool.poetry]
name = "mini-print-stream-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
ultralytics = "^8.2.18"
flask = "^3.0.3"
websockets = "^12.0"
pydantic = "^2.7.1"
dill = "^0.3.8"
python-statemachine = "^2.2.0"
filetype = "^1.2.0"
opencv-python = "^4.9.0.80"
flask-cors = "^4.0.1"
trio = "^0.25.1"
trio-websocket = "^0.11.1"
trio-asyncio = "^0.15.0"
nest-asyncio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
